Upcoming:
- Fixed cables in creative tab
- Added back support for the XNet api
- Fixed a potential crash in facades

1.16-3.0.9:
- Fixed a potential crash when placing a connector next to a hopper

1.16-3.0.8:
- Clipboard support in the controller is working again

1.16-3.0.7:
- Update to latest McJtyLib

1.16-3.0.6-beta:
- Fixed a problem on servers

1.16-3.0.5-beta:
- Accidentally removed the required tags

1.16-3.0.4-beta:
- Update to latest McJtyLib

3.0.3-beta:
- Fixed a problem on servers

3.0.2-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

3.0.1-beta:
- Fixed a potential exploit which could be used to attack a server

3.0.0-beta:
- First port to 1.16.2

2.1.8:
- Fixed a potential exploit which could be used to attack a server

2.1.7-beta:
- Update for latest McJtyLib

2.1.6-beta:
- Update for latest McJtyLib

2.1.5-beta:
- Kyle Edwards changed facade blocks to copy mimic block from other facade blocks
- Kyle Edwards fixed rendering of damaged cables

2.1.4-beta:
- Fixed the item model for XNet facades
- Kyle Edwards fixed various things related to the facades:
    - Fixed some rendering issues when breaking facades
    - Fixed the cable blocks being solid
    - Consolidate all cable/facade rendering into GenericCableBakedModel and remove the redundant FacadeBakedModel and everything related to it. This reduces the amount of code that has to be maintained.
    - Fix a possible performance regression in #414 that was pointed out on Discord. Now, the cable quads only get returned in the solid rendering layer, and quads for the mimicked block only get returned if the mimicked block's canRenderInLayer() is true.
    - Allow facade/cable rendering in all layers, ensuring that translucency works in addition to cutouts and solids.
    - Always render the cable even if there is also a facade, so that translucent and cutout blocks show the cable inside.

2.1.3-beta: