@@ -2,6 +2,7 @@ Upcoming:
 - Fixed cables in creative tab
 - Added back support for the XNet api
 - Fixed a potential crash in facades
+- Wireless router works again
 
 1.16-3.0.9:
 - Fixed a potential crash when placing a connector next to a hopper
